fixed project title from wrapping (for now)

--- a/index.css
+++ b/index.css
@@ -125,13 +125,13 @@ img {
 }
 
 .projects-container {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
 .projects-grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(278px, 1fr));
     justify-content: center;
     margin: 0 1rem;
     gap: 1rem;
